# sententia-web

./: .gitattributes  .gitignore  README.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/config/: settings.py  urls.py
backend/core/: rag_logic.py  serializers.py  views.py
backend/core/migrations/: 0001_demo_token.py
data/: constitucion_chile.txt  leyes_ejemplo.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  utils.js
frontend/src/components/: Chat.jsx  LandingPage.jsx  Login.jsx  Register.jsx
frontend/src/pages/: Chat.jsx  LandingPage.jsx  Login.jsx  Register.jsx
frontend/src/services/: api.js
frontend/src/styles/: LandingPage.module.css  auth.css  chat.css
frontend/src/tests/: Chat.test.js
